# automation-report

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  web.yml
config/: ads_credentials.form.yaml  clients.example.yaml  clients.form.yaml
scripts/: create_secrets.sh  deploy_cloud_run.sh
sql/: schema_ads_daily_fact.sql  schema_ads_monthly_summary.sql
src/report_automation/: __init__.py  config.py  config_form.py  credentials.py  main.py  models.py  orchestrator.py  summary.py  templates.py  time_windows.py
src/report_automation/connectors/: __init__.py  adapter.py  base.py  google_ads.py  meta.py  tiktok.py
src/report_automation/reporting/: __init__.py  metabase.py  sheets.py  sheets_templates.py  slides.py  slides_templates.py
src/report_automation/storage/: __init__.py  bigquery.py
tests/: test_summary.py  test_time_windows.py
web/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/prisma/: schema.prisma  seed.js
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx
web/src/app/api/clients/: route.ts
web/src/app/api/runs/: route.ts
web/src/app/clients/: page.tsx
web/src/app/clients/[id]/: page.tsx
web/src/app/dashboard/: page.tsx
web/src/app/login/: page.tsx
web/src/app/runs/: page.tsx
web/src/app/schedules/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/templates/: page.tsx
web/src/components/: AppShell.tsx  StatCard.tsx
web/src/lib/: auth.ts  constants.ts  require-auth.ts  secrets.ts  session.ts
(+2 files in other folders)
